numbers added for easy

--- a/MilestoneJS/index.html
+++ b/MilestoneJS/index.html
@@ -15,7 +15,7 @@
         <!-- grid -->
         <div id="board"></div>
         <br>
-        <div id="digits"></div>
+        <div id="digits">
     </body>
 
 
