--- a/MilestoneJS/index.html
+++ b/MilestoneJS/index.html
@@ -11,6 +11,10 @@
         <h1>Sudoku title placeholder</h1>
         <!-- score / mistakes / time -->
         <hr>
+        <!-- id="mistake" for mistake counter -->
+        <!-- id="score" increase point value per correct number inserted-->
+        <!-- id="time" timer start from game load--> 
+        <h2 id="mistake">placeholder score/mistake/time</h2>
 
         <!-- grid -->
         <div id="board"></div>
