base with comments

--- a/MilestoneJS/index.html
+++ b/MilestoneJS/index.html
@@ -14,7 +14,7 @@
         <!-- id="mistake" for mistake counter -->
         <!-- id="score" increase point value per correct number inserted-->
         <!-- id="time" timer start from game load--> 
-        <h2 id="mistake">placeholder score/mistake/time</h2>
+        <h2 id="error">0</h2>
 
         <!-- grid -->
         <div id="board"></div>
