TODO lists updated

--- a/MilestoneJS/index.html
+++ b/MilestoneJS/index.html
@@ -8,10 +8,10 @@
     </head>
 
     <body>
-        <h1>Sudoku title placeholder</h1>
+        <h1>Sudoku</h1>
         <!-- score / mistakes / time -->
         <hr>
-        <!-- id="mistake" for mistake counter -->
+        <!-- error for mistake counter 0/3 -->
         <!-- id="score" increase point value per correct number inserted-->
         <!-- id="time" timer start from game load--> 
         <h2 id="error">0</h2>
