--- a/MilestoneJS/index.html
+++ b/MilestoneJS/index.html
@@ -2,15 +2,18 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Sudoku</title>
-    <link defer sync rel="stylesheet" href="style.css">
-    <script defer sync src="index.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <title>Sudoku</title>
+  <link defer sync rel="stylesheet" href="style.css">
+  <script defer sync src="index2.js"></script>
 
 </head>
 
 <body>
+<!-- <button id="resetButton" role="button">
+    reset</button>> -->
+  <div>
     <h1>Sudoku</h1>
     <!-- Score / Mistakes / Time -->
     <hr>
